--- a/redux.html
+++ b/redux.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <form id="form">
-    <input type="text" name="title" placeholder="Nombre de la canción"/>
+    <input 
+      type="text" 
+      name="title" 
+      placeholder="Nombre de la canción"/>
   </form>
   <!-- <div id="home-container"></div> -->
   <!-- <div id="modal-container"></div> -->
