--- a/redux.html
+++ b/redux.html
@@ -40,6 +40,7 @@
       name="title" 
       placeholder="Nombre de la canción"/>
   </form>
+  <div id="playlist"></div>
   <!-- <div id="home-container"></div> -->
   <!-- <div id="modal-container"></div> -->
   <script src="http://localhost:9000/js/redux.js"></script>
